# gemma-witness

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.repro  LICENSE  README.md  RELEASE.md  SECURITY.md  build-guide.md  day-4-evidence.md  deny.toml  flake.nix  package.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: build-mistralrs.yml  ci.yml  fuzz-nightly.yml  live-e2e.yml  release.yml  reproducibility.yml  sign-fingerprints.yml
apps/capture/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/capture/src/: app.svelte  bindings.ts  main.ts
apps/capture/src-tauri/: Cargo.toml  tauri.conf.json
apps/capture/src-tauri/capabilities/: default.json
apps/capture/src-tauri/src/: audio.rs  error.rs  lib.rs  main.rs  sidecar.rs  state.rs
apps/capture/src-tauri/src/commands/: audio_commands.rs  device.rs  image_commands.rs  inference_commands.rs  mod.rs  seal_commands.rs
apps/verifier/: build-verify-registry.mjs  build.mjs  expected-output-hash.txt  index.html  known-fingerprints.json  package.json  pnpm-lock.yaml  trusted-signers.json  tsconfig.json  verify.ts
apps/verifier/src/: bundle-reader.ts  canonicalize-manifest.ts  parse-public-key-p256.ts  parse-public-key.ts  render-result.ts  style.css  types.ts  verify-amendment-chain.ts  verify-asset-hashes.ts  verify-logic.ts  verify-model-fingerprint.ts  verify-registry-signature.ts  verify-signature.ts  verify-signer-identity.ts
apps/verifier/tests/: build-verify-registry-tamper.test.mjs  canonicalization-conformance.test.ts  debug-verify.ts  e2e.test.ts  parse-public-key.test.ts  summarize-attestation.test.ts
crates/witness-cli/: Cargo.toml
crates/witness-cli/src/: main.rs
crates/witness-core/: Cargo.toml
crates/witness-core/examples/: tamper_audio.rs
crates/witness-core/fuzz/: Cargo.toml
crates/witness-core/fuzz/fuzz_targets/: bundle_read.rs  canonicalize.rs  manifest_parse.rs  signature_verify.rs
crates/witness-core/src/: bundle_builder.rs  bundle_zip.rs  canonical.rs  error.rs  hashing.rs  key_provider.rs  keystore.rs  keystore_p256.rs  lib.rs  manifest.rs  secure_enclave.rs  signing.rs  signing_ecdsa.rs  verifier.rs
crates/witness-core/src/assertions/: audio_fingerprint.rs  incident_report.rs  inference_parameters.rs  mod.rs
crates/witness-core/tests/: amendment_chain.rs  bundle_roundtrip.rs  canonicalization.rs  canonicalization_conformance.rs  day-4-e2e.rs  degraded_paths.rs  ecdsa_p256_roundtrip.rs  fake-sidecar-e2e.rs  generate_fixture.rs  generate_sep_fixture.rs  incident_schema.rs  keystore.rs  manifest_schema.rs  manifest_v2_routing.rs  secure_enclave_fixture.rs  secure_enclave_roundtrip.rs  transport_survival.rs
crates/witness-eval/: Cargo.toml
crates/witness-eval/src/: main.rs
crates/witness-fingerprint-verify/: Cargo.toml
crates/witness-fingerprint-verify/src/: lib.rs  signature.rs
crates/witness-fingerprint-verify/tests/: tamper-regression.rs
crates/witness-fingerprints/: Cargo.toml  build.rs
crates/witness-fingerprints/src/: lib.rs
crates/witness-inference/: Cargo.toml
crates/witness-inference/src/: client.rs  error.rs  http.rs  inference_parameters.rs  lib.rs  pipeline.rs  response.rs
crates/witness-inference/src/passes/: analyze_image.rs  check_consistency.rs  mod.rs  transcribe.rs
crates/witness-inference/tests/: mistralrs_audio_probe.rs  pipeline.rs  sidecar_security.rs
crates/witness-test-sidecar/: Cargo.toml
crates/witness-test-sidecar/src/: lib.rs
docs/: comparison-with-c2pa.md  day-3-completion.md  decisions.md  kaggle-writeup.md  security-acknowledgement-format.md  security-pgp-key.asc  signer-onboarding.md
docs/decisions/: day2.md
docs/maintainer/: repo-settings.md  self-hosted-runner.md
evidence/day1/: MANIFEST.md  README.md  curl-response.json  python-versions.txt
evidence/day3/: pipeline-test.txt
evidence/demo-2026-05-13/: CHECKSUMS.txt  journal.md
evidence/demo-2026-05-13/logs/: cli-pipeline.json  cli-pipeline.stderr  cli-verify-live.json  v1-models.json
inference/fingerprints/: google__gemma-4-E4B-it__3555bddc.json  google__gemma-4-E4B-it__main.json  index.json  mlx-community__gemma-4-e4b-it-4bit__cc3b666c.json  registry-manifest.json
inference/mistralrs-sidecar/: PINNED.json  README.md  compute-fingerprint.sh  model-fingerprint.json  start.sh  stop.sh
inference/mistralrs-sidecar/tests/: start-sh-gate.sh
inference/mlx-sidecar/: README.md  model-fingerprint.json  pyproject.toml  start.sh  stop.sh
inference/mlx-sidecar/cli/: transcribe.py
inference/transformers-sidecar/: README.md  pyproject.toml  requirements.txt  start.py
inference/transformers-sidecar/tests/: test_boot_handshake.py
scripts/: dev.mjs  setup.mjs
signers/: README.md  manifest.json
spec/: bundle-format.md  incident-schema.json  manifest-schema.json
tests/day1/: test-transcribe.sh
tests/fixtures/: day-4-fixture.witness  day1-sample.txt  secure-enclave-fixture.witness
tests/fixtures/canonicalization-conformance/: control-characters.input.json  deep-nesting-15-levels.input.json  escaped-unicode.input.json  integer-precision-loss-projection.input.json  integers-near-2pow53.input.json  key-ordering-at-depth.input.json  long-string.input.json  many-keys-lexicographic.input.json  mixed-nested-collections.input.json  negative-zero.input.json  numeric-notation-normalization.input.json  small-floats.input.json  subnormal-float.input.json  zwj-emoji-sequence.input.json
tests/fixtures/day-3-scenarios/: generate_images.py
tests/fixtures/transcripts/: 01-fall-from-elevation.txt  02-chemical-release.txt  03-wage-theft.txt  04-harassment.txt  05-property-damage.txt  09-gas-leak.txt  (+7 more)
tools/check-pinned-binary/: Cargo.toml
tools/check-pinned-binary/src/: main.rs
tools/check-pinned-binary/tests/: cli.rs
tools/seed-fingerprints/: Cargo.toml
tools/seed-fingerprints/src/: main.rs
tools/sign-fingerprints/: Cargo.toml
tools/sign-fingerprints/src/: main.rs
tools/sign-fingerprints/tests/: cli.rs
(+19 files in other folders)
