[workspace]
resolver = "2"
members = [
    "crates/witness-core",
    "crates/witness-inference",
    "crates/witness-cli",
    "crates/witness-eval",
    "apps/capture/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
jsonschema = { version = "0.18", default-features = false }
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["pem", "rand_core"] }
rand = "0.8"
rand_core = "0.6"
serde_jcs = "0.1"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
keyring = "3.6"
uuid = { version = "1.10", features = ["v4", "serde"] }
