[workspace]
resolver = "2"
members = [
    "crates/witness-core",
    "crates/witness-inference",
    "crates/witness-cli",
    "crates/witness-eval",
    "crates/witness-fingerprints",
    "crates/witness-fingerprint-verify",
    "crates/witness-test-sidecar",
    "apps/capture/src-tauri",
    "tools/seed-fingerprints",
    "tools/check-pinned-binary",
    "tools/sign-fingerprints",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
jsonschema = { version = "0.18", default-features = false }
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["pem", "rand_core"] }
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "pem", "std", "pkcs8"] }
rand = "0.8"
rand_core = "0.6"
serde_jcs = "0.1"
zip = { version = "8.6", default-features = false, features = ["deflate"] }
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
rustfft = "6.2"
hound = "3.5"
