[package]
name = "witness-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Command-line interface for Gemma.Witness."

[[bin]]
name = "witness"
path = "src/main.rs"

[dependencies]
witness-core = { path = "../witness-core" }
witness-inference = { path = "../witness-inference" }
clap.workspace = true
tokio.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
