[package]
name = "witness-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core types, schema, and bundle primitives for Gemma.Witness."

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars = { workspace = true, features = ["chrono"] }
thiserror.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
serde_jcs.workspace = true
zip.workspace = true
keyring.workspace = true
uuid.workspace = true
rand.workspace = true

[features]
default = []
# Reserved for the future Secure-Enclave / TPM backends documented in
# crates/witness-core/src/key_provider.rs. Enabling this feature today fails
# at compile time on purpose.
hardware-keys = []

[dev-dependencies]
jsonschema.workspace = true
proptest = "1.5"
tempfile = "3.12"
witness-inference = { path = "../witness-inference" }
witness-test-sidecar = { path = "../witness-test-sidecar" }
witness-fingerprints = { path = "../witness-fingerprints" }
tokio = { workspace = true }
reqwest = { workspace = true }
keyring.workspace = true
