[package]
name = "witness-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Core types, schema, and bundle primitives for Gemma.Witness."

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars = { workspace = true, features = ["chrono"] }
thiserror.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
p256.workspace = true
serde_jcs.workspace = true
zip.workspace = true
keyring.workspace = true
uuid.workspace = true
rand.workspace = true
rustfft.workspace = true
hound.workspace = true
zeroize = "1.8"

[features]
default = []
# Reserved for the future Secure-Enclave / TPM backends documented in
# crates/witness-core/src/key_provider.rs. Enabling this feature today fails
# at compile time on purpose.
hardware-keys = []

[target.'cfg(target_os = "macos")'.dependencies]
# Used only under `--features hardware-keys` for the Secure Enclave provider.
# Pinned to a 3.x line that builds on stable Rust 1.80 (our MSRV); 3.7 raised
# rust-version to 1.85.
security-framework = { version = "~3.6", default-features = false, features = ["OSX_10_15"] }
security-framework-sys = "2"
core-foundation = "0.10"
core-foundation-sys = "0.8"

[dev-dependencies]
jsonschema.workspace = true
proptest = "1.5"
tempfile = "3.12"
witness-inference = { path = "../witness-inference" }
witness-test-sidecar = { path = "../witness-test-sidecar" }
witness-fingerprints = { path = "../witness-fingerprints" }
tokio = { workspace = true }
reqwest = { workspace = true }
keyring.workspace = true
