[package]
name = "witness-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Core types, schema, and bundle primitives for Gemma.Witness."

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars = { workspace = true, features = ["chrono"] }
thiserror.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
p256.workspace = true
serde_jcs.workspace = true
zip.workspace = true
keyring.workspace = true
uuid.workspace = true
rand.workspace = true
rustfft.workspace = true
hound.workspace = true
zeroize = "1.8"

[features]
default = []
# Reserved for the future Secure-Enclave / TPM backends documented in
# crates/witness-core/src/key_provider.rs. Enabling this feature today fails
# at compile time on purpose.
hardware-keys = []

[target.'cfg(target_os = "macos")'.dependencies]
# Wraps the Secure Enclave provider. Pinned to a 3.x line that builds on
# stable Rust 1.80 (our MSRV); 3.7 raised rust-version to 1.85.
# `security-framework-sys`, `core-foundation`, and `core-foundation-sys` were
# previously listed alongside this dep for a raw FFI block calling
# `SecKeyCopyAttestationKey(kSecKeyAttestationKeyTypeSIK, ...)`. That symbol
# is not exported by `Security.framework` on macOS (verified via the SDK
# Security.tbd), so the FFI block was unlinkable; it has been removed along
# with the unused sys-crate deps. SEP-backed signing still works through the
# safe API.
security-framework = { version = "~3.6", default-features = false, features = ["OSX_10_15"] }

[dev-dependencies]
jsonschema.workspace = true
proptest = "1.5"
tempfile = "3.12"
witness-inference = { path = "../witness-inference" }
witness-test-sidecar = { path = "../witness-test-sidecar" }
witness-fingerprints = { path = "../witness-fingerprints" }
tokio = { workspace = true }
reqwest = { workspace = true }
keyring.workspace = true
