[package]
name = "witness-inference"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HTTP client for the local OpenAI-compatible inference sidecar."

[dependencies]
witness-core = { path = "../witness-core" }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
thiserror.workspace = true
jsonschema.workspace = true
tracing.workspace = true
