[package]
name = "witness-inference"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HTTP client for the local OpenAI-compatible inference sidecar."

[dependencies]
witness-core = { path = "../witness-core" }
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
thiserror.workspace = true
jsonschema.workspace = true
tracing.workspace = true
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
rand = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
tokio = { workspace = true }
serde_json = { workspace = true }
hex = "0.4"
sha2 = "0.10"
jsonschema = { workspace = true }
witness-test-sidecar = { path = "../witness-test-sidecar" }
