[project]
name = "gemma-witness-transformers-sidecar"
version = "0.1.0"
description = "Pure-Python transformers fallback inference sidecar for Gemma.Witness"
requires-python = ">=3.11,<3.14"
dependencies = [
  "transformers>=5.8,<5.9",
  "torch>=2.11,<2.12",
  "torchvision>=0.26,<0.27",
  "torchaudio>=2.11,<2.12",
  "fastapi>=0.115,<0.116",
  "uvicorn>=0.32,<0.33",
  "pillow>=11,<12",
  "numpy>=2,<3",
]

[tool.uv]
package = false
