[package]
name = "check-pinned-binary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Verifies a sidecar binary's SHA-256 against a pinned manifest before launch."

[[bin]]
name = "check-pinned-binary"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.11"
hex = "0.4"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.12"
assert_cmd = "2.0"
predicates = "3.1"
