[package]
name = "seed-fingerprints"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Seeds inference/fingerprints/ entries from Hugging Face LFS metadata and the local model cache."

[[bin]]
name = "seed-fingerprints"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
witness-fingerprints = { path = "../../crates/witness-fingerprints" }

[dev-dependencies]
tempfile = "3.12"
